First time chatter.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -12733,6 +12733,9 @@
         }
       }
     },
+    "First time chatter" : {
+
+    },
     "Font size" : {
       "localizations" : {
         "de" : {
