Streaming history continued.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -3613,6 +3613,9 @@
         }
       }
     },
+    "Audio codec" : {
+
+    },
     "Audio level" : {
       "localizations" : {
         "de" : {
