--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -15972,6 +15972,9 @@
         }
       }
     },
+    "Length" : {
+
+    },
     "Licenses" : {
       "localizations" : {
         "de" : {
@@ -19067,6 +19070,9 @@
     "Next" : {
 
     },
+    "No recordings." : {
+
+    },
     "Noise level" : {
       "localizations" : {
         "de" : {
@@ -21952,6 +21958,12 @@
           }
         }
       }
+    },
+    "Recording" : {
+
+    },
+    "Recordings" : {
+
     },
     "Red" : {
       "localizations" : {
@@ -27606,6 +27618,9 @@
           }
         }
       }
+    },
+    "Thumbnail" : {
+
     },
     "Time" : {
       "localizations" : {
