--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -28261,7 +28261,13 @@
         }
       }
     },
+    "Total recordings" : {
+
+    },
     "Total sent" : {
+
+    },
+    "Total size" : {
 
     },
     "Total streams" : {
