--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -3291,6 +3291,9 @@
         }
       }
     },
+    "Appearence" : {
+
+    },
     "Are you sure?" : {
       "localizations" : {
         "de" : {
