Highest thermal state in streaming history.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -14491,6 +14491,9 @@
         }
       }
     },
+    "Highest thermal state" : {
+
+    },
     "Host missing" : {
       "localizations" : {
         "de" : {
