--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -30023,6 +30023,9 @@
         }
       }
     },
+    "Version history" : {
+
+    },
     "Very experimental and very secret!" : {
       "localizations" : {
         "de" : {
