Rename quick buttons to buttons in UI.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -21787,6 +21787,7 @@
 
     },
     "Quick buttons" : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
