--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -16032,6 +16032,9 @@
     "Length" : {
 
     },
+    "Let it snow" : {
+
+    },
     "Licenses" : {
       "localizations" : {
         "de" : {
