Added YouTube and AfreecaTV to create stream wizard.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -368,6 +368,9 @@
         }
       }
     },
+    "???" : {
+
+    },
     "." : {
 
     },
@@ -2005,6 +2008,9 @@
 
     },
     "3. Replace 7654 with your port." : {
+
+    },
+    "4bkf-8d03-g6w3-ekjh-emdc" : {
 
     },
     "7TV emotes" : {
@@ -8231,10 +8237,16 @@
     "Copy from " : {
 
     },
+    "Copy from ??? (requires login)." : {
+
+    },
     "Copy from https://help.twitch.tv/s/twitch-ingest-recommendation. Remove {stream_key}." : {
 
     },
     "Copy from https://kick.com/dashboard/settings/stream (requires login)." : {
+
+    },
+    "Copy from https://youtube.com (requires login)." : {
 
     },
     "Cosmetics" : {
@@ -14003,6 +14015,9 @@
     "Good stability in most network conditions." : {
 
     },
+    "gr230gkwpj03" : {
+
+    },
     "Gray scale" : {
       "localizations" : {
         "de" : {
@@ -15500,6 +15515,9 @@
       }
     },
     "IP address or domain name" : {
+
+    },
+    "jo304F4gr" : {
 
     },
     "Key frame interval" : {
@@ -22785,6 +22803,9 @@
           }
         }
       }
+    },
+    "rtmp://a.rtmp.youtube.com/live2" : {
+
     },
     "rtmp://arn03.contribute.live-video.net/app" : {
 
