Only show viewers, chat and OBS status in top left UI if configured.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -18191,6 +18191,9 @@
         }
       }
     },
+    "Must be a number between 1 and 65535." : {
+
+    },
     "Mute" : {
       "localizations" : {
         "de" : {
